Fix disappearing nav on mobile safari
There's some kind of bug in mobile safair where position: fixed elements
disappear while scrolling. Adding a transofrm forces hardware
acceleration which fixes the issue.

--- a/css/_nav.scss
+++ b/css/_nav.scss
@@ -30,6 +30,8 @@
     z-index: 10;
     width: calc(100% - 1.875rem);
     position: absolute;
+    transform: translateZ(0);
+    -webkit-transform: translateZ(0);
   }
   #head.m-down,
   #head.m-up { position: absolute; }
